[project]
name = "Conaudio"
version = "0.1.0"
description = "A high-level wrapper library for audio/music-related utilities."
authors = [
    {name = "Ricardo Guzman", email = "ml.ricardog@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0, <3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
tox = "^4.26.0"

